<resources>
    <string name="app_name">Partners Go</string>
    <string name="nav_characters">Character</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="check_internet_connection">Check internet connection</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="no_connection">Нет соединения</string>
    <string name="characters">Characters</string>
    <string name="character_size">Character list size is %d</string>
    <string name="detailed">Detailed Character</string>
    <string name="app_name_md"><font fgcolor='#ffd030'>Табыс</font> Партнер</string>
    <string name="main_menu_item_title">Главная</string>
    <string name="withdraw_menu_item_title">Вывод средств</string>
    <string name="support_menu_item_title">Поддержка</string>
    <string name="profile_menu_item_title">Профиль</string>
    <string name="profile_card_view_title">Мой профиль</string>
    <string name="profile_card_view_profile_name">Maqsat</string>
    <string name="balance_card_view_withdraw_label">Вывести деньги</string>
    <string name="balance_card_view_cash_amount">12,500 т</string>
    <string name="balance_card_view_balance_title">Мой баланс</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">+77075609390</string>
    <string name="change_password_btn_text">Изменить пароль</string>
    <string name="change_pin_code_btn_text">Изменить код быстрого доступа</string>
    <string name="invite_friend_btn_text">Пригласить друзей в приложение</string>
    <string name="invite_friend_title">Приглашение</string>
    <string name="invite_friend_hint">Номер вашего друга</string>
    <string name="invite_friend_btn">Пригласить друга</string>
    <string name="go_incomes_btn_text">Поступления от друзей</string>
    <string name="incomes_title">Поступления</string>
    <string name="history_title">История выводов</string>
    <string name="history_card_name">Название карты</string>
    <string name="history_account">Основной баланс</string>
    <string name="history_account_partner">Партнерский баланс</string>
    <string name="history_card_mask">**** **** **** %s</string>
    <string name="history_title_ref">История партнерских выводов</string>
    <string name="go_notifications_btn_text">Новости</string>
    <string name="notifications_title">Новости</string>
    <string name="profile_app_version">Версия приложения %s</string>
    <string name="btn_uploaded_title">Новая версия приложения загружена</string>
    <string name="btn_uploaded_desc">Перезапустить</string>
    <string name="with_draw_page_balance_title">Мой баланс</string>
    <string name="with_draw_page_balance_history_title">История</string>
    <string name="amount_hint">0</string>
    <string name="bottom_sheet_dialog_title">Карта для вывода</string>
    <string name="bottom_sheet_dialog_remove_card_title">Изменить</string>
    <string name="cancel_choose_bottom_sheet_dialog">ОТМЕНА</string>
    <string name="card_name_default">Kaspi Gold</string>
    <string name="add_card_text">Добавить карту</string>
    <string name="authorization_page_edit_text_hint">Введите номер телефона</string>
    <string name="authorization_page_continue_button_text">Продолжить</string>
    <string name="alert_password_recover_title">Восстановление</string>
    <string name="alert_password_recover_message">Вы уверены что хотите сделать восстановление пинкода?</string>
    <string name="accept">Да</string>
    <string name="accept2">ОК</string>
    <string name="errorAcceptanceCreditCard">Пожалуйста, проверьте правильность ввода номера кредитной карты, поле принимает только цифры (0–9)</string>
    <string name="decline">Отмена</string>
    <string name="error_length">Номер карты должен состоять из 16 цифр</string>
    <string name="change_pincode_title">Изменение пинкода</string>
    <string name="change_pincode_message">Вы уверены что хотите изменить пинкод?</string>
    <string name="logOut_title">Вы уверены что хотите выйти?</string>
    <string name="logOut_message">Выйти из приложения</string>
    <string name="error">Ошибка</string>
    <string name="error_message">Данный номер не зарегистрирован в нашей базе. Попробуйте еще раз.</string>
    <string name="delete_card_title">Вы точно хотите удалить карту?</string>
    <string name="delete_card_message">Если вы удалите карту, вам придётся добавить новую</string>
    <string name="error_empty">Заполните поля!</string>
    <string name="operation_ok">Операция прошла успешно! Ждите пополнения</string>
    <string name="internet_message">Убедитесь, что включен WI-FI или мобильный Интернет, и попробуйте еще раз.</string>
    <string name="internet_title">"Подключение к Интернету отсутствует"</string>
    <string name="retry">Повторить</string>
    <string name="error_occurred_retry">Произошла ошибка</string>
    <string name="otmenit">Отменить</string>
    <string name="notSameError">Номера карт не совпадают</string>
    <string name="code_not_same">Повторный код не совпадает. Пожалуйста введите заново.</string>
    <string name="income_sum">%s ₸</string>
    <string name="balance_menu">Мой счет</string>
    <string name="partners_menu">Партнерский счет</string>
    <string name="default_notification_channel_id">10003</string>
    <string name="refresh">Обновить</string>
    <string name="confirm">Продолжить</string>
    <string name="current_pin_code">Текущий код</string>
    <string name="create_pin_code">Придумайте код</string>
    <string name="repeat_password">Повторите код</string>
    <string name="confirm_auth">Подтвердить</string>
    <string name="loading">Загрузка . . .</string>
    <string name="forgot_pin_code">Забыли пинкод?</string>
    <string name="create_pin_code_with_four_letter">Создайте код быстрого доступа из 4 цифр</string>
    <string name="choose_park">Выбор парка</string>
    <string name="choose_park_element">Выберите парк</string>
    <string name="calculate_commission">Рассчитать комиссию</string>
    <string name="enter_phone_number_right">Пожалуйста введите корректный номер xxx-xxx-xx-xx</string>
    <string name="please_enter_phone_number">Пожалуйста введите номер телефона</string>
    <string name="phone_support_first">7052664639</string>
    <string name="phone_support_second">7471053955</string>
    <string name="your_phone_number_is_blocked">Ваш номер заблокирован</string>
    <string name="current_user_not_exist_in_database">Данный номер не зарегистрирован в нашей базе. Попробуйте еще раз.</string>
    <string name="send_again">Отправить повторно</string>
    <string name="entered_wrong_code_check_again">Код неверный убедитесь что вы ввели правильный код</string>
    <string name="enter_code">Введите код</string>
    <string name="we_have_it_to_your_account">Мы отправили код на Ваш WhatsApp. Если код не будет доставлен на WhatsApp, ожидайте СМС код через 1 минуту.\nВажно: код не доставляется до операторов Tele2 и Altel.</string>
    <string name="repeat_code">Проверить код</string>
    <string name="send_again_after_n_sec">Отправить повторно через %1$d сек</string>
    <string name="token_absent">Ваша сессия в приложении истекла. Просим перезайти заново.</string>
    <string name="news">Новости</string>
    <string name="choose_card">Выберите карту</string>
    <string name="choose_call_number">Выберите телефон номера</string>
    <string name="error_minimum_amount">Минимальная сумма перевода 200 \u20b8</string>
    <string name="error_minimum_amount_left">На вашем балансе должно оставаться не менее 100 тг, чтобы вы могли получать "наличные" заказы.</string>
    <string name="error_not_enough_money">Не достаточно средств</string>
    <string name="close">Закрыть</string>
    <string name="_7">+7</string>
    <string name="your_phone_number">Ваш номер телефона</string>
    <string name="get_sms_code">Получить код</string>
    <string name="enter_your_phone_number_hint">Пожалуйста, введите свой \n номер телефона для авторизации</string>
    <string name="confirm_your_phone_number">Подтвердите свой номер</string>
    <string name="logout">Выйти</string>
    <string name="place_holder">%1$s %2$s</string>
    <string name="transaction_detail">Детали транзакции</string>
    <string name="total_amount">Общая сумма</string>
    <string name="date">Дата</string>
    <string name="card_name">Название карты</string>
    <string name="id">ID транзакции</string>
    <string name="card_number">Номер карты</string>
    <string name="commission">Комиссия</string>
    <string name="transaction_time">Время транзакции</string>
    <string name="open_balance">Сумма баланса до транзакции</string>
    <string name="close_balance">Сумма баланса после транзакции</string>
    <string name="status">Статус</string>
    <string name="choose_card_first">Сначала выберите карту</string>
    <string name="add_card_title">Добавление карты</string>
    <string name="enter_card_name">Введите название карты</string>
    <string name="add_card_number">Введите номер карты</string>
    <string name="repeat_card_number">Повторите номер карты</string>
    <string name="add">Добавить</string>
    <string name="card_was_deleted">Ваша карта успешно удалена</string>
    <string name="pin_zero" translatable="false">0</string>
    <string name="pin_one" translatable="false">1</string>
    <string name="pin_two" translatable="false">2</string>
    <string name="pin_three" translatable="false">3</string>
    <string name="pin_four" translatable="false">4</string>
    <string name="pin_five" translatable="false">5</string>
    <string name="pin_six" translatable="false">6</string>
    <string name="pin_seven" translatable="false">7</string>
    <string name="pin_eight" translatable="false">8</string>
    <string name="pin_nine" translatable="false">9</string>
    <string name="enter_pin_code">Введите код доступа</string>
    <string name="repeat_pin_code">Повторите код доступа</string>
    <string name="taxi_park">Таксопарк</string>
    <string name="support_name">Техпомощь</string>
    <string name="more">Подробнее</string>
    <string name="knowledge">База знаний</string>
    <string name="update_hint">Вы пользуетесь старой версией,\n обновите приложение</string>
    <string name="update">Обновить приложение</string>
</resources>