<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_main"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/main_menu_item_title"
        app:labelVisibilityMode="labeled" />
    <item
        android:id="@+id/navigation_withdraw"
        android:icon="@drawable/ic_coin_stack"
        android:title="@string/withdraw_menu_item_title"
        app:labelVisibilityMode="labeled" />
    <item
        android:id="@+id/navigation_phone"
        android:icon="@drawable/ic_baseline_call_24"
        android:title="@string/support_menu_item_title"
        app:labelVisibilityMode="labeled" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/profile_menu_item_title"
        app:labelVisibilityMode="labeled" />
</menu>
