<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.dnapayments.presentation.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/header"
            style="@style/Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:text="@string/profile_menu_item_title"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/profile_info_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/log_out_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header">

            <TextView
                android:id="@+id/profile_frag_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_13sdp"
                android:fontFamily="@font/uber_move_bold"
                android:text="@{@string/place_holder(viewModel.profile.firstName, viewModel.profile.lastName)}"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"
                tools:text="Азамат Ж." />

            <TextView
                android:id="@+id/profile_frag_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/uber_move_bold"
                android:text="@{viewModel.profile.mobile}"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="+7 701 023 45 45" />


            <Button
                android:id="@+id/change_pin_code"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_white_20"
                android:padding="@dimen/_11sdp"
                android:text="@string/change_pin_code_btn_text"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="14sp" />

            <Button
                android:id="@+id/invite_friend_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/invite_friend_btn_text"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/go_incomes_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/go_incomes_btn_text"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/go_notifications_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_white_20"
                android:padding="@dimen/_11sdp"
                android:text="@string/go_notifications_btn_text"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/app_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/rubik_500"
                android:textColor="@color/grey"
                android:textSize="12sp"
                android:textStyle="normal"
                tools:text="Версия 1.2 (45)" />
        </LinearLayout>

        <Button
            android:id="@+id/log_out_btn"
            style="@style/Button"
            android:layout_marginBottom="16dp"
            android:background="@drawable/background_white_20"
            android:backgroundTint="#ff605c"
            android:fontFamily="@font/uber_move_bold"
            android:text="@string/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>