<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.dnapayments.presentation.registration.AuthorizationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/login_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/base_logo_transparent_background" />

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/uber_move_bold"
            android:text="@string/confirm_your_phone_number"
            android:textColor="@color/header"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_image" />

        <TextView
            android:id="@+id/login_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/rubik_500"
            android:gravity="center"
            android:text="@string/enter_your_phone_number_hint"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_title" />

        <EditText
            android:id="@+id/country_code_text"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/text_input_bg"
            android:ems="10"
            android:enabled="false"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="10"
            android:padding="16dp"
            android:text="@string/_7"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_desc" />

        <EditText
            android:id="@+id/phone_number_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/text_input_bg"
            android:ems="10"
            android:hint="@string/your_phone_number"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="16dp"
            android:text="@={viewModel.phoneNumber}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/country_code_text"
            app:layout_constraintTop_toBottomOf="@+id/login_desc" />

        <Button
            android:id="@+id/generate_btn"
            style="@style/Button"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:enabled="@{!viewModel.loading}"
            android:text="@string/get_sms_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_number_text" />


        <ProgressBar
            android:id="@+id/login_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginEnd="16dp"
            android:visibility="@{viewModel.loading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="@+id/generate_btn"
            app:layout_constraintEnd_toEndOf="@+id/generate_btn"
            app:layout_constraintTop_toTopOf="@+id/generate_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>